Improved stability and performance