@@ -632,7 +632,7 @@ public class AudioFormatHelper
 			{
 				if (cachedFiles.contains(file))
 				{
-					valids.put(file, new Boolean(false));
+					valids.put(file, Boolean.valueOf(false));
 				}
 			}
 		}
@@ -649,7 +649,7 @@ public class AudioFormatHelper
 		{
 			cachedFiles.add(file);
 		}
-		valids.put(file, new Boolean(true));
+		valids.put(file, Boolean.valueOf(true));
 	}
 	private synchronized File getValidCacheFile()
 	{
